--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "7.24.4",
+    "@babel/runtime": "7.24.4",
     "@types/node": "20.12.7",
     "@types/react": "18.2.79",
     "typescript": "5.4.5"
